Corrections alignement

--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -313,11 +313,16 @@
       font-family: "GothamMedium";
     }
     p {
+      margin: 0;
+    }
+    div {
       font-family: "GothamRegular";
       font-size: 18px;
-      @media only screen and (max-width: 768px) {
-        font-size: 16px;
-      }
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin: 0.6rem 0;
+      gap: 10px;
     }
   }
   &__icon {
